fix issue with register user
